Checkpoint metadata patching (#112)
This pull request introduces a way to specify reusable yaml files
(stored under `resources/inference/metadata/`) for patching checkpoint
metadata. Waiting for https://github.com/ecmwf/anemoi-inference/pull/433
to be merged.

Some patching files are specified for ICH1 emulators, fixing the issue
of variable names in `variables_metadata` (IFS names are used, instead
of COSMO, because during training this comes with less headaches).

--- a/resources/inference/configs/sgm-forecaster-global-ich1-oper.yaml
+++ b/resources/inference/configs/sgm-forecaster-global-ich1-oper.yaml
@@ -18,14 +18,9 @@ output:
         path: grib/{date}{time:04}_{step:03}.grib
         encoding:
           typeOfGeneratingProcess: 2
+          centre: lssw
         templates:
-          - file:
-              path: resources/icon-ch1-typeOfLevel=surface.grib
-              variables: [lsm, msl, sp, z, skt, tp]
-          - file:
-              path: resources/icon-ch1-typeOfLevel=heightAboveGround.grib
-              variables: [2t, 2d, 10u, 10v]
-          - file: resources/icon-ch1-typeOfLevel=isobaricInhPa.grib
+          samples: resources/templates_index_icon.yaml
         post_processors:
           - extract_mask: # removes global points
               mask: "lam_0/cutout_mask"
@@ -34,6 +29,7 @@ output:
         path: grib/ifs-{date}{time:04}_{step:03}.grib
         encoding:
           typeOfGeneratingProcess: 2
+          centre: ecmf
         templates:
           samples: resources/templates_index_ifs.yaml
         post_processors:
@@ -44,11 +40,4 @@ output:
         - assign_mask: # fill local/global overlapping points with nan
             mask: "global/cutout_mask"
 
-patch_metadata:
-  config:
-    dataloader:
-      test:
-        dataset:
-          cutout:
-            - dataset: /store_new/mch/msopr/ml/datasets/mch-ich1-1km-2024-2025-1h-pl13-ifsnames-v1.0.zarr
-            - dataset: /store_new/mch/msopr/ml/datasets/aifs-od-an-oper-0001-mars-n320-2016-2025-6h-v1-for-single-v2.zarr
+patch_metadata: resources/sgm-ich1-oper-patch_metadata.yaml
