--- a/resources/inference/configs/sgm-forecaster-global-ich1.yaml
+++ b/resources/inference/configs/sgm-forecaster-global-ich1.yaml
@@ -19,13 +19,7 @@ output:
         encoding:
           typeOfGeneratingProcess: 2
         templates:
-          - file:
-              path: resources/icon-ch1-typeOfLevel=surface.grib
-              variables: [lsm, msl, sp, z, skt, tp]
-          - file:
-              path: resources/icon-ch1-typeOfLevel=heightAboveGround.grib
-              variables: [2t, 2d, 10u, 10v]
-          - file: resources/icon-ch1-typeOfLevel=isobaricInhPa.grib
+          samples: resources/templates_index_icon.yaml
         post_processors:
           - extract_mask: # removes global points
               mask: "lam_0/cutout_mask"
@@ -44,11 +38,4 @@ output:
         - assign_mask: # fill local/global overlapping points with nan
             mask: "global/cutout_mask"
 
-patch_metadata:
-  config:
-    dataloader:
-      test:
-        dataset:
-          cutout:
-            - dataset: /store_new/mch/msopr/ml/datasets/mch-realch1-fdb-1km-2005-2025-1h-pl13-ifsnames-v1.0.zarr
-            - dataset: /store_new/mch/msopr/ml/datasets/aifs-ea-an-oper-0001-mars-n320-1979-2024-6h-v1-for-single-v2.zarr
+patch_metadata: resources/sgm-ich1-patch_metadata.yaml
